deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-app
  namespace: prod-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-app
  template:
    metadata:
      labels:
        app: poc-app
    spec:
      containers:
      - name: poc-app
        image: nginx:alpine
        ports:
        - containerPort: 80
