service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-app-svc
  namespace: prod-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: poc-app
