httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: poc-route
  namespace: prod-app
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx-gateway
  rules:
  - backendRefs:
    - name: poc-app-svc
      port: 80
    # matches: []   # catch-all (remove path match for root testing)
